added home page

--- a/suggestions/templates/suggestionpage.html
+++ b/suggestions/templates/suggestionpage.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Dangrek' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Mada' rel='stylesheet'>
+    <link href='style.css' rel='stylesheet'>
+    <title>Suggestions</title>
 </head>
 <body>
-    <P>HI</P>
+    <h2>Let's see what we can do:</h2>
+    <div class = "buttonAlign">
+        <button>GO FOR A RUN</button>
+    </div>
+    <div class = "buttonAlign">
+        <button>DEEP BREATHING</button>
+    </div>
+    <div class = "buttonAlign">
+        <button>NATURE WALK</button>
+    </div>
+    <div class = "buttonAlign">
+        <button>GO FOR A RUN</button>
+    </div>
 </body>
 </html>
