--- a/home/templates/style.css
+++ b/home/templates/style.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url('../../static/homeBG.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .buttonAlign {
     text-align: center;
 }
@@ -29,5 +36,32 @@
 }
 
 .image {
-    margin-left: 34px;
+    margin-right: 34px;
+    margin-left: auto;
+    height: 59px;
+    width: 59px;
+}
+
+button {
+    margin-top: 25px;
+    width: 325px;
+    height: 50px;
+    font-family: "Mada";
+    font-size: 20px;
+    background-color: #48624A;
+    border-radius: 40px;
+    border-style: none;
+    transition: background-color 0.25s;
+}
+
+button:hover{
+    background-color:#506e53;
+    cursor: pointer;
+}
+
+.buttonText {
+    color: white;
+    font-family: "Mada";
+    margin-top: auto;
+    margin-bottom: auto;
 }
