--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Mada' rel='stylesheet'>
     <title>Home</title>
 </head>
-<body style = "padding-top: 50px">
+<body>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">MON</p>
