connected images in home

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,43 +14,43 @@
         <div class = "innerBlock">
             <p class = "blockText">MON</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">TUE</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">WED</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">THU</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">FRI</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">SAT</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">SUN</p>
         </div>
-        <img class = "image" src = "../../static/Angry.svg">
+        <img class = "image" src = "{% static 'Angry.svg' %}">
     </div>
 <div style = "text-align: center;">
     <button><p class = "buttonText">LOG TODAY'S MOOD</p></button>
