--- a/suggestions/templates/meditation.html
+++ b/suggestions/templates/meditation.html
@@ -9,24 +9,22 @@
     <title>Suggestions</title>
 </head>
 <body>
-    <h2>DEEP BREATHING</h2>
-
+    <h2>MEDITATION</h2>
 
     <iframe class="frame"
-     src="https://www.youtube.com/embed/aNXKjGFUlMs?si=Vs9ZGVWt6tHKC9xt" 
-     title="YouTube video player" 
-     frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      referrerpolicy="strict-origin-when-cross-origin" 
-      allowfullscreen></iframe>
-
-    
-
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/inpok4MKVLM?si=uS-c5jp6gkmC7RMr" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin"
+     allowfullscreen></iframe>
+  
 
     <div class = "block">
         <p class="blockText">
-            Feeling upset? Don’t forget to breathe! Sometimes we all just need to take a step back and slow down.
-            
+            Life can feel much too fast paced. Take some time and meditate! Close your eyes and enjoy the moment.
             
 
         </p>
