--- a/suggestions/templates/gentlemovement.html
+++ b/suggestions/templates/gentlemovement.html
@@ -9,24 +9,22 @@
     <title>Suggestions</title>
 </head>
 <body>
-    <h2>DEEP BREATHING</h2>
-
+    <h2>GENTLE MOVEMENT</h2>
 
     <iframe class="frame"
-     src="https://www.youtube.com/embed/aNXKjGFUlMs?si=Vs9ZGVWt6tHKC9xt" 
-     title="YouTube video player" 
-     frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      referrerpolicy="strict-origin-when-cross-origin" 
-      allowfullscreen></iframe>
-
-    
-
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/QErBojJvCMI?si=NU9U3UtTTiX3Qu3w" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    referrerpolicy="strict-origin-when-cross-origin" 
+    allowfullscreen></iframe>
+  
 
     <div class = "block">
         <p class="blockText">
-            Feeling upset? Don’t forget to breathe! Sometimes we all just need to take a step back and slow down.
-            
+            Take some time to do some gentle movements. Take your mind off of what’s bothering you and focus on yourself. 
             
 
         </p>
