--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -14,43 +14,43 @@
         <div class = "innerBlock">
             <p class = "blockText">MON</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.MON }}">
+        <img class = "image" src = "" data-mood="{{ moods.MON }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText" >TUE</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.TUE }}">
+        <img class = "image" src = "" data-mood="{{ moods.TUE }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">WED</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.WED }}">
+        <img class = "image" src = "" data-mood="{{ moods.WED }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">THU</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.THU }}">
+        <img class = "image" src = "" data-mood="{{ moods.THU }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">FRI</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.FRI }}">
+        <img class = "image" src = "" data-mood="{{ moods.FRI }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">SAT</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.SAT }}">
+        <img class = "image" src = "" data-mood="{{ moods.SAT }}">
     </div>
     <div class = "block">
         <div class = "innerBlock">
             <p class = "blockText">SUN</p>
         </div>
-        <img class = "image" src = "{% static 'Angry.svg' %}" data-mood="{{ moods.SUN }}" >
+        <img class = "image" src = "" data-mood="{{ moods.SUN }}" >
     </div>
 <div style = "text-align: center;">
     <button><p class = "buttonText" onclick = "changePic()">LOG TODAY'S MOOD</p></button>
