--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='style.css' rel='stylesheet'>
+    <link href="{% static 'home.css' %}" rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Dangrek' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Mada' rel='stylesheet'>
     <title>Home</title>
@@ -53,10 +53,11 @@
         <img class = "image" src = "" data-mood="{{ moods.SUN }}" >
     </div>
 <div style = "text-align: center;">
-    <button><p class = "buttonText" onclick = "changePic()">LOG TODAY'S MOOD</p></button>
+    <button><p class = "buttonText">LOG TODAY'S MOOD</p></button>
 </div>
 
 <script>
+    changePic();
     function changePic() {
         images = document.getElementsByClassName("image");
         for (i = 0; i < 7; i++) {
