all html css done

--- a/suggestions/templates/sadSuggestions.html
+++ b/suggestions/templates/sadSuggestions.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Dangrek' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Mada' rel='stylesheet'>
-    <link href='style.css' rel='stylesheet'>
+    <link href='suggestions.css' rel='stylesheet'>
     <title>Suggestions</title>
 </head>
 <body>
-    <h2>Let's see what we can do:</h2>
-    <div class = "buttonAlign">
-        <button>GO FOR A RUN</button>
-    </div>
+    <h2>LET'S SEE WHAT WE CAN DO:</h2>
     <div class = "buttonAlign">
         <button>DEEP BREATHING</button>
     </div>
     <div class = "buttonAlign">
-        <button>NATURE WALK</button>
+        <button>MEDITATION</button>
     </div>
     <div class = "buttonAlign">
-        <button>GO FOR A RUN</button>
+        <button>MOVEMENT</button>
+    </div>
+    <div class = "buttonAlign" style = "margin-top: 200px;">
+        <button style = "width: 250px">MENU</button>
     </div>
 </body>
 </html>
