--- a/suggestions/templates/infoHappy.css
+++ b/suggestions/templates/infoHappy.css
@@ -1,6 +1,6 @@
 body {
     color: #283F2B;
-    background-image: url('../../static/suggBG.png');
+    background-image: url('../../static/infoBG.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 393px 852px;
